# c_lib_macro

./: CMakeLists.txt  README.md  new_source.c
core/: CMakeLists.txt  void.c  yaya_argcount.h  yaya_arithmetic.c  yaya_arithmetic.h  yaya_arithmetic_constant.h  yaya_arithmetic_discrete.h  yaya_arithmetic_round.h  yaya_bit.c  yaya_bit.h  yaya_bool.h  yaya_cdecl.h  yaya_check.h  yaya_concat.h  yaya_debug.c  yaya_debug.h  yaya_endian.h  yaya_flag.h  yaya_gover.h  yaya_rand.c  yaya_rand.h  yaya_sugar.h  yaya_type.h  yaya_unused.h
lib/: CMakeLists.txt  mm.h  yaya_argcount.h  yaya_arithmetic.c  yaya_arithmetic.h  yaya_bit.c  yaya_bit.h  yaya_bool.h  yaya_cdeclaration.h  yaya_chek.h  yaya_concat.h  yaya_concatenate.h  yaya_debug.c  yaya_debug.h  yaya_defines.c  yaya_defines.h  yaya_endian.h  yaya_flag.h  yaya_lang.h  yaya_math.h  yaya_number.h  yaya_rand.c  yaya_rand.h  yaya_sugar.h  yaya_type.h  yaya_unused.h
test/: CMakeLists.txt  main.c  test.h  test_argcount.c  test_arithmetic.c  test_arithmetic_assignment.c  test_arithmetic_combinatoric.c  test_arithmetic_compare.c  test_arithmetic_constant.c  test_arithmetic_decomposition.c  test_arithmetic_iter.c  test_arithmetic_math.c  test_arithmetic_math_chk.c  test_arithmetic_minmax.c  test_arithmetic_parity.c  test_arithmetic_progresion.c  test_arithmetic_round.c  test_arithmetic_segment.c  test_arithmetic_series.c  test_arithmetic_unar.c  test_bit.c  test_bool.c  test_check.c  test_concat.c  test_debug.c  test_endian.c  test_flag.c  test_math.c  test_rand.c  test_sugar.c  test_type.c  test_unused.c  unit_test.h  unit_test_bit.c
test/test_arithmetic/: base.c  base_const.c  base_conv.c  base_inverse.c  base_isnum.c  base_iter.c  base_logical.c  base_math.c  base_math_chk.c  base_minmax.c  base_segment.c  base_unar.c  combinatoric.c  progresion.c  round.c  series.c
test/test_bit/: check.c  cnt.c  logical.c  mask.c  position.c  shift.c
